# FastTokenizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py
.github/: release-pypi.yaml
.github/workflows/: release-pypi.yaml
bindings/python/fasttokenizer/: __init__.py  segmenter.py
include/fasttokenizer/: Segmenter.h  segmenter.h
scripts/: release-pypi.bash
src/: Segmenter.cpp  segmenter.cpp
src/python/: CMakeLists.txt  fasttokenizer_py.cpp
src/tools/: CMakeLists.txt  fasttokenizer_main.cpp  fasttokenizer_main_legacy.cpp
